<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе.</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_passord">Введите ваш пароль</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warrning_fill_fields">Все поля должны быть заполнены</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffe">Кофе</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="buttonSendDescription">Кнопка отправить заказ</string>
    <string name="chooseDrink">Выберите вид напитка</string>
    <string name="default_name">Клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\n Пароль: %s\n Напиток: %s\n Вид напитка: %s\n</string>
    <string name="need_additions">Необходимые добавки:</string>

    <string-array name="options_of_coffe">
        <item>Американо</item>
        <item>Экспрессо</item>
        <item>Лате</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
</resources>
